--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -50,11 +50,21 @@
 			<li class="headers">Places to Stay</li>
 			<li>Resort Hotels</li>
 			<li>Special Offers</li>
-			<li></li>
 		</ul>
 
 
 		<h4>Related Disney Sites</h4>
+
+		<ul>
+			<li>Disney Vacation Club</li>
+			<li>Disney Cruise Line</li>
+			<li>Disney Parks</li>
+			<li>Disney Weddings</li>
+			<li>Disney Floral & Gifts</li>
+			<li>Disney Merchandise</li>
+			<li>Disney Meetings and Conventions</li>
+			<li>Disney Visa Card</li>
+		</ul>
 
 		<a href="#">Help and Guest Services</a>
 		<a href="#">Site Map</a>
@@ -65,7 +75,7 @@
 
 		<footer>
 
-			<p>Copyright Disney. All Rights Reserved, Disney Parks and Travel</p>
+			<p>Copyright: Disney. All Rights Reserved, Disney Parks and Travel</p>
 
 		</footer>
 
