--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -30,48 +30,50 @@
 
 		<hr>
 
-		<h4>For assistance planning your visit, please call (555)555-555.</h4>
-		<p>7:00 AM to 11:00 PM Eastern Time. Guests under 18 years of age must have parent or guardian permission to call.</p>
+		<main>
+			<h4>For assistance planning your visit, please call (555)555-555.</h4>
+			<p>7:00 AM to 11:00 PM Eastern Time. Guests under 18 years of age must have parent or guardian permission to call.</p>
 
-		<hr>
+			<hr>
 
-		<ul>
-			<li class="headers">Parks</li>
-			<li>Magic Kingdom</li>
-			<li>Epcot</li>
-			<li>Hollywood Studios</li>
-			<li>Animal Kingdom</li>
-			<li>Water Parks</li>
-			<li>Park Hours</li>
-			<li class="headers">Tickets</li>
-			<li>Park Tickets</li>
-			<li>Annual Passes</li>
-			<li>Vacation Packaages</li>
-			<li class="headers">Places to Stay</li>
-			<li>Resort Hotels</li>
-			<li>Special Offers</li>
-		</ul>
+			<ul>
+				<li class="headers">Parks</li>
+				<li>Magic Kingdom</li>
+				<li>Epcot</li>
+				<li>Hollywood Studios</li>
+				<li>Animal Kingdom</li>
+				<li>Water Parks</li>
+				<li>Park Hours</li>
+				<li class="headers">Tickets</li>
+				<li>Park Tickets</li>
+				<li>Annual Passes</li>
+				<li>Vacation Packaages</li>
+				<li class="headers">Places to Stay</li>
+				<li>Resort Hotels</li>
+				<li>Special Offers</li>
+			</ul>
 
 
-		<h4>Related Disney Sites</h4>
+			<h4>Related Disney Sites</h4>
 
-		<ul>
-			<li>Disney Vacation Club</li>
-			<li>Disney Cruise Line</li>
-			<li>Disney Parks</li>
-			<li>Disney Weddings</li>
-			<li>Disney Floral & Gifts</li>
-			<li>Disney Merchandise</li>
-			<li>Disney Meetings and Conventions</li>
-			<li>Disney Visa Card</li>
-		</ul>
+			<ul>
+				<li>Disney Vacation Club</li>
+				<li>Disney Cruise Line</li>
+				<li>Disney Parks</li>
+				<li>Disney Weddings</li>
+				<li>Disney Floral & Gifts</li>
+				<li>Disney Merchandise</li>
+				<li>Disney Meetings and Conventions</li>
+				<li>Disney Visa Card</li>
+			</ul>
 
-		<a href="#">Help and Guest Services</a>
-		<a href="#">Site Map</a>
-		<a href="#">Terms of Use</a>
-		<a href="#">Legal Notices</a>
-		<a href="#">Privacy Policy</a>
-		<a href="#">Children's Online Privacy Policy</a>
+			<a href="#">Help and Guest Services</a>
+			<a href="#">Site Map</a>
+			<a href="#">Terms of Use</a>
+			<a href="#">Legal Notices</a>
+			<a href="#">Privacy Policy</a>
+			<a href="#">Children's Online Privacy Policy</a>
+		</main>
 
 		<footer>
 
