Changed Image Sizes

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -84,11 +84,12 @@
 			</div>
 			<hr>
 
-			<section class="tabs">
+			<section class="tabs clearfix">
 
 				<h2>Parks</h2>
 
 				<article>
+					<img src="images/magic_kingdom.jpg" alt="picture of Magic Kingdom" title="Magic Kingdom">
 					<h3>Magic Kingdom</h3>
 					<p>Fairytale dreams come true for children of all ages at Magic Kingdom park. Delight in classic attractions, enchanting fireworks, musical parades and beloved Disney Characters across 6 themed lands.</p>
 				</article>
@@ -423,7 +424,7 @@
 
 			<hr>
 			
-			<section class="tabs">
+			<section class="tabs clearfix">
 
 				<h2>Activities</h2>
 				
