Playing with column widths

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -200,13 +200,27 @@
 						</ul>
 					</article>				
 
-					<article>
-						<img src="images/hotels/yacht_club3_sq.jpg" alt="picture of Yacht Club" title="Yacht Club">
+<!-- 					<article id="wide">
+						<img src="images/hotels/yacht_club3_rec.jpg" alt="picture of Yacht Club" title="Yacht Club">
 						<h4>Disney's Yacht Club</h4>
 						<p>Delight in the formal grace of a grand New England-style yacht club at this lakeside hotel. Relax in the inviting elegance of a plush lobby replete with nautical touches, explore the whimsical Stormalong Bay and rent a variety of watercraft from Bayside Marina.</p>
 						<ul>
 							<li>Cool off with a lazy river, waterslide, quiet pools, whirlpool spas and more at Stormalong Bay.</li> 
 							<li>Epcot Resort Area</li>
+						</ul>
+					</article>	 -->
+
+				</section>
+
+				<section class="floats clearfix">
+
+					<article id="wide">
+						<img src="images/hotels/polynesian_resort_rec.jpg" alt="picture of Disney's Polynesian Village Resort" title="Disney's Polynesian Village Resort">
+						<h4>Disney's Polynesian Village Resort</h4>
+						<p>Celebrate the spirit of the South Pacific at this oasis of tropical palms and lush vegetation. Enjoy moonlit nights immersed in the outdoor island ambience and the exotic tastes of our divine restaurants.</p>
+						<ul>
+							<li>Delight in an all-you-care-to-enjoy, family-style luau with hula dancing and a fire-knife performer!</li> 
+							<li>Magic Kindgom Resort Area</li>
 						</ul>
 					</article>	
 
@@ -215,17 +229,14 @@
 						<h4>Disney's Boardwalk Inn</h4>
 						<p>Experience the charm and whimsy of turn-of-the-century Atlantic City at this waterfront Resort hotel. Discover carnival games, unique dining and exciting nightlife on the Coney Island-style boardwalk.</p>
 						<ul>
-							<li>Make a spash at Luna Park Pool.</li>
+							<li>Make a splash at Luna Park Pool.</li>
 							<li>Delight in a massage at the state-of-the-art fitness center.</li>
 							<li>Epcot Resort Area</li>
 						</ul>
 					</article>	
 
-				</section>
-
-				<section class="floats clearfix">
-
 					<article>
+						<img src="images/hotels/wilderness_lodge_sq.jpg" alt="picture of Disney's Wilderness Lodge" title="Disney's Wilderness Lodge">
 						<h4>Disney's Wilderness Lodge</h4>
 						<p>Escape to the rustic majesty of America's Great Northwest. Inspired by turn-of-the-century National Park lodges, Disney's Wilderness Lodge celebrates American craftmanship and honors the beauty of the untamed wildnerness.</p>
 						<ul>
@@ -233,16 +244,11 @@
 							<li>Discover a whimsical heated pool surrounded by pine trees and boulders.</li>
 							<li>Magic Kingdom Resort Area</li>
 						</ul>
-					</article>	
+					</article>		
 
-					<article>
-						<h4>Disney's Polynesian Village Resort</h4>
-						<p>Celebrate the spirit of the South Pacific at this oasis of tropical palms and lush vegetation. Enjoy moonlit nights immersed in the outdoor island ambience and the exotic tastes of our divine restaurants.</p>
-						<ul>
-							<li>Delight in an all-you-care-to-enjoy, family-style luau with hula dancing and a fire-knife performer!</li> 
-							<li>Magic Kindgom Resort Area</li>
-						</ul>
-					</article>	
+				</section>
+
+				<section class="floats clearfix">				
 
 					<article>
 						<h4>Disney's Contemporary Resort</h4>
