--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -250,7 +250,8 @@
 
 				<section class="floats clearfix">				
 
-					<article>
+					<article class="wide">
+						<img src="images/hotels/contemporary_resort_rec.jpg" alt="picture of Disney's Contemporary Resort" title="Disney's Contemporary Resort">
 						<h4>Disney's Contemporary Resort</h4>
 						<p>Retreat to this ultra-modern Disney Resort hotel and discover award-winning dining, spectacular views and dazzling pools.</p>
 						<ul>
@@ -261,6 +262,7 @@
 					</article>	
 
 					<article>
+						<img src="images/hotels/animal_kingdom_lodge_rec.jpg" alt="picture of Disney's Animal Kingdom Lodge" title="Disney's Animal Kingdom Lodge">
 						<h4>Disney's Animal Kingdom Lodge</h4>
 						<p>Step into the heart of Africa at this magnificent Resort hotel. Inspired by the traditional African kraal, the horsehoe-curved design provides spectacular views of 4 lush savannas that over 200 hoofed animals and birds call home.</p>
 						<ul>
