--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -18,6 +18,9 @@
 			#heels_pic {
 				width: 100% !important;
 			}
+			.high {
+				font-size: 30px;
+			}
 		}
 		</style>
 
@@ -35,7 +38,7 @@
 						</tr>
 						<tr style="background-color: #BFE9F0">
 							<td colspan="3" align="center">
-								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;">high </span><span style="font-style: italic;">style</span></span>
+								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;" class="high">high </span><span style="font-style: italic;">style</span></span>
 <!-- does letter-spacing work here? -->
 								<br>
 
@@ -54,7 +57,7 @@
 						</tr>
 						<tr style="background-color: #BFE9F0">
 							<td colspan="3" align="center">
-								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;">highly </span><span style="font-style: italic;">sought after</span></span>
+								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;" class="high">highly </span><span style="font-style: italic;">sought after</span></span>
 <!-- does letter-spacing work here? -->
 								<br>
 
@@ -68,7 +71,7 @@
 						</tr>
 						<tr style="background-color: #BFE9F0">
 							<td colspan="3" align="center">
-								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;">high </span><span style="font-style: italic;">class</span></span>
+								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;" class="high">high </span><span style="font-style: italic;">class</span></span>
 <!-- does letter-spacing work here? -->
 								<br>
 
