--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -18,6 +18,9 @@
 			#heels_pic {
 				width: 100% !important;
 			}
+			#covet{
+				font-size: 36px;
+			}
 			.high {
 				font-size: 30px;
 			}
@@ -33,12 +36,12 @@
 					<table border="0" cellpadding="0" style="line-height: 1.7;" cellspacing="0" width="600" align="center" id="main-table">
 						<tr cellpadding="10">
 							<td colspan="3" align="center">
-								<span style="font-family: Georgia; font-size: 24px;">Covet</span>
+								<span style="font-family: Georgia; font-size: 24px;" id="covet">Covet</span>
 							</td>
 						</tr>
 						<tr style="background-color: #BFE9F0">
 							<td colspan="3" align="center">
-								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;" class="high">high </span><span style="font-style: italic;">style</span></span>
+								<span style="font-family: Georgia; font-size: 20px;" class="high"><span style="text-transform: uppercase; letter-spacing: 1.5;">high </span><span style="font-style: italic;">style</span></span>
 <!-- does letter-spacing work here? -->
 								<br>
 
@@ -57,7 +60,7 @@
 						</tr>
 						<tr style="background-color: #BFE9F0">
 							<td colspan="3" align="center">
-								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;" class="high">highly </span><span style="font-style: italic;">sought after</span></span>
+								<span style="font-family: Georgia; font-size: 20px;" class="high"><span style="text-transform: uppercase; letter-spacing: 1.5;">highly </span><span style="font-style: italic;">sought after</span></span>
 <!-- does letter-spacing work here? -->
 								<br>
 
@@ -71,7 +74,7 @@
 						</tr>
 						<tr style="background-color: #BFE9F0">
 							<td colspan="3" align="center">
-								<span style="font-family: Georgia; font-size: 20px;"><span style="text-transform: uppercase; letter-spacing: 1.5;" class="high">high </span><span style="font-style: italic;">class</span></span>
+								<span style="font-family: Georgia; font-size: 20px;" class="high"><span style="text-transform: uppercase; letter-spacing: 1.5;">high </span><span style="font-style: italic;">class</span></span>
 <!-- does letter-spacing work here? -->
 								<br>
 
