--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -52,7 +52,7 @@
 							<td>
 								<img src="images/off_the_shoulder.jpg" width="300" alt="Off-The-Shoulder Top" title="Off-The-Shoulder Top" class="shoulder_top_pics">
 							</td>
-							<td>
+							<td width="0">
 							</td>
 							<td>
 								<img src="images/off_the_shoulder2.jpg" width="300" alt="Off-The-Shoulder Top" title="Off-The-Shoulder Top" class="shoulder_top_pics">
