Upload for Test Email

--- a/unit_10/email2.html
+++ b/unit_10/email2.html
@@ -32,15 +32,6 @@
 				width: 100% !important;
 				max-width: 600px !important;
 			}
-			#show_whenreduced {
-				display: block !important;
-			}
-			#hide_whenreduced {
-				display: none !important;
-			}
-			#top_pic {
-				width: 100% !important;
-			}
 			#jeans_pic {
 				width: 100% !important;
 			}
@@ -110,22 +101,16 @@
 								<a href="#" style="font-family: Georgia; font-size: 14px; color: #292B36" class="high_links">OFF-THE-SHOULDER TOPS</a>
 							</td>
 						</tr>
-						<tr id="hide_whenreduced">
+						<tr>
 							<td>
-								<img src="images/off_the_shoulder.jpg" width="300" alt="Off-The-Shoulder Top" title="Off-The-Shoulder Top">
+								<img src="http://images.anthropologie.com/is/image/Anthropologie/4110254546663_010_b2?$pdp-detail-shot$" width="300" alt="Off-The-Shoulder Top" title="Off-The-Shoulder Top">
 							</td>
 							<td width="0">
 							</td>
 							<td>
-								<img src="images/off_the_shoulder2.jpg" width="300" alt="Off-The-Shoulder Top" title="Off-The-Shoulder Top">
+								<img src="http://images.anthropologie.com/is/image/Anthropologie/4110580816464_067_b?$pdp-detail-shot$" width="300" alt="Off-The-Shoulder Top" title="Off-The-Shoulder Top">
 							</td>
 						</tr>
-						<tr id="show_whenreduced" style="display: none;">
-							<td colspan="3" align="center">
-								<img src="images/off_the_shoulder.jpg" width="600" alt="Off-The-Shoulder Top" title="Off-The-Shoulder Top" id="top_pic">
-							</td>
-						</tr>
-<!-- need assistance making it properly responsive with the top images -->
 						<tr style="background-color: #BFE9F0">
 							<td colspan="3" align="center">
 								<span style="font-family: Georgia; font-size: 20px;" class="high"><span style="text-transform: uppercase; letter-spacing: 1.5px;">highly </span><span style="font-style: italic;">sought after</span></span>
@@ -137,7 +122,7 @@
 						</tr>
 						<tr>
 							<td colspan="3" align="center">
-								<img src="images/jeans.jpg" width="600" alt="Must-Have Jeans" title="Must-Have Jeans" id="jeans_pic">
+								<img src="http://images.anthropologie.com/is/image/Anthropologie/4122011331499_092_b?$pdp-detail-shot$" width="600" alt="Must-Have Jeans" title="Must-Have Jeans" id="jeans_pic">
 							</td>
 						</tr>
 						<tr style="background-color: #BFE9F0">
@@ -151,7 +136,7 @@
 						</tr>
 						<tr>
 							<td colspan="3" align="center">
-								<img src="images/strappy_heels.jpg" width="600" alt="Stylish Strappy Heels" title="Stylish Strappy Heels" id="heels_pic">
+								<img src="http://images.anthropologie.com/is/image/Anthropologie/39382155_025_b?$pdp-detail-shot$" width="600" alt="Stylish Strappy Heels" title="Stylish Strappy Heels" id="heels_pic">
 							</td>
 						</tr>
 						<tr style="background-color: #BFE9F0">
@@ -173,11 +158,6 @@
 								<br>
 
 								<a href="#" style="font-family: Georgia; font-size: 14px; color: #ccc text-transform: uppercase" class="nav">store locator</a>
-							</td>
-						</tr>
-						<tr>
-							<td colspan="3" align="center">
-								<img src ="images/social_media.png" width="100%" alt="Social Media Logos" title="Social Media Logos" id="social_media_logos_pic">
 							</td>
 						</tr>
 						<tr>
